Refactor viewattendance command and parser